# da16200_sdk

./: .gitignore  CMakeLists.txt  README.md
apps/app_common/include/util/: app_common_support.h
cmake/: bootloader.cmake  da16200-toolchain.cmake  main_app.cmake
cmake/helpers/: run_custom_toolchain.sh
core/bsp/cmsis/include/: cmsis_gcc.h
core/system/src/crypto/: da16x_crypto_sbrom.c
core/system/src/crypto/cryptocell/host/pal/freertos/: cc_pal_interrupt_ctrl.c
tools/version/genfiles/: buildtime.h  rtos_version_str.txt
